<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CalculaIdadeActivity">

    <TextView
        android:id="@+id/appTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="66dp"
        android:text="@string/app_title"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/txt_titulo_nome"
        android:textColor="?attr/actionModeSplitBackground"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputNome"
        app:layout_constraintStart_toStartOf="@+id/inputNome"
        app:layout_constraintTop_toBottomOf="@+id/appTitulo" />

    <EditText
        android:id="@+id/inputNome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/input_hint_nome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/txt_nascimento"
        android:textColor="?attr/actionModeSplitBackground"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputData"
        app:layout_constraintStart_toStartOf="@+id/inputData"
        app:layout_constraintTop_toBottomOf="@+id/inputNome" />

    <EditText
        android:id="@+id/inputData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/input_hint_nascimento"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtData" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="acaoCalcular"
        android:text="@string/btn_calcular"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputData" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="15dp"
        android:text="@string/txt_resultado"
        app:layout_constraintBottom_toTopOf="@+id/btnHistorico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="79dp"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="acaoSair"
        android:text="@string/btn_sair"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHistorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="acaoExibirHistorico"
        android:text="Histórico"
        app:layout_constraintBottom_toTopOf="@+id/btnSair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>